src/objects/APXTConga4__Conga_Collection_Solution__c.object
<CustomObject>
    <fields>
        <fullName>APXTConga4__Conga_Collection__c</fullName>
        <label>Conga Collection</label>
        <referenceTo>APXTConga4__Conga_Collection__c</referenceTo>
        <relationshipLabel>Conga Collection Solutions</relationshipLabel>
        <relationshipName>Conga_Collection_Solutions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Conga_Solution__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Conga Solution</label>
        <referenceTo>APXTConga4__Conga_Solution__c</referenceTo>
        <relationshipLabel>Conga Collection Solutions</relationshipLabel>
        <relationshipName>Conga_Collection_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Conga Collection Solution</label>
    <nameField>
        <label>Conga Collection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conga Collection Solutions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>